--- a/public/stylesheets/searchPage.css
+++ b/public/stylesheets/searchPage.css
@@ -60,7 +60,8 @@ button {
 
 
 .image {
-  border-radius: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .amenities {
