--- a/views/searchPageOrlando.ejs
+++ b/views/searchPageOrlando.ejs
@@ -3,6 +3,9 @@
   <head>
     <title>ORLANDO SEARCH</title>
     <link rel='stylesheet' href='/stylesheets/searchPage.css' />
+     <!-- SLICK SLIDER CSS -->
+    <link rel='stylesheet' href='/stylesheets/slickSlider.css' />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
       <link rel='stylesheet' href='/stylesheets/style3.css' />
        <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
@@ -51,33 +54,81 @@
           <label for"city">Select City</label><br>
           <select multiple id="city" name="city">
               <option value="ORLANDO" selected>Orlando</option>
+              <option value="BRADENTON">Bradenton</option>
+              <option value="CLEARWATER">Clearwater</option>
+              <option value="CLEARWATER BEACH">Clearwater Beach</option>
+              <option value="CLERMONT">Clermont</option>
+              <option value="DADE CITY">Dade City</option>
+              <option value="DAVENPORT">Davenport</option>
+              <option value="DELAND">Deland</option>
+              <option value="DELTONA">Deltona</option>
+              <option value="ENGLEWOOD">Englewood</option>
+              <option value="GROVELAND">Groveland</option>
+              <option value="HAINES CITY">Haines City</option>
+              <option value="HOLMES BEACH">Holmes Beach</option>
+              <option value="HUDSON">Hudson</option>
+              <option value="KISSIMMEE">Kissimmee</option>
+              <option value="LAKE WALES">Lake Wales</option>
+              <option value="LAKELAND">Lakeland</option>
+              <option value="LAND O LAKES">Land O Lakes</option>
+              <option value="LARGO">Largo</option>
+              <option value="LEESBURG">Leesburg</option>
+              <option value="LITHIA">Lithia</option>
+              <option value="LONGBOAT KEY">Longboat Key</option>
+              <option value="LONGWOOD">Longwood</option>
+              <option value="LUTZ">Lutz</option>
+              <option value="MADIERA BEACH">Madiera Beach</option>
+              <option value="MAITLAND">Maitland</option>
+              <option value="MOUNT DORA">Mount Dora</option>
+              <option value="NEW PORT RICHEY">Clermont</option>
+              <option value="NEW SMYRNA BEACH">Dade City</option>
+              <option value="NOKOMIS">Davenport</option>
+              <option value="NORTH PORT">Deland</option>
+              <option value="OCOEE">Deltona</option>
+              <option value="ODESSA">Englewood</option>
+              <option value="PALM HARBOR">Groveland</option>
+              <option value="PALMETTO">Haines City</option>
+              <option value="PARRISH">Holmes Beach</option>
               <option value="PLACIDA">Placida</option>
-              <option value="WINTER HAVEN">Winter Haven</option>
+              <option value="PLANT CITY">Plant City</option>
+              <option value="POINCIANA">Poinciana</option>
               <option value="PORT CHARLOTTE">Port Charlotte</option>
-             <!--  <option value="Bee Cave">Bee Cave</option>
-              <option value="Buda">Buda</option>
-              <option value="Burnet">Burnet</option>
-              <option value="Cedar Park">Cedar Park</option>
-              <option value="Driftwood">Driftwood</option>
-              <option value="Dripping Springs">Dripping Springs</option>
-              <option value="Georgetown">Georgetown</option>
-              <option value="Horseshoe Bay">Horseshoe Bay</option>
-              <option value="Hutto">Hutto</option>
-              <option value="Jonestown">Jonestown</option>
-              <option value="Kyle">Kyle</option>
-              <option value="Lago Vista">Lago Vista</option>
-              <option value="Lakeway">Lakeway</option>
-              <option value="Leander">Leander</option>
-              <option value="Liberty Hill">Liberty Hill</option>
-              <option value="Manor">Manor</option>
-              <option value="Marble Falls">Marble Falls</option>
-              <option value="Pflugerville">Pflugerville</option>
-              <option value="Round Rock">Round Rock</option>
-              <option value="Spicewood">Spicewood</option>
-              <option value="Taylor">Taylor</option>
-              <option value="the Hills">the Hills</option>
-              <option value="West Lake Hills">West Lake Hills</option>
-              <option value="Wimberley">Wimberley</option> -->
+              <option value="PORT ORANGE">Port Orange</option>
+              <option value="PORT RICHEY">Port Richey</option>
+              <option value="PUNTA GORDA">Punta Gorda</option>
+              <option value="REDDINGTON BEACH">Reddington Beach</option>
+              <option value="REDDINGTON SHORES">Reddington Shores</option>
+              <option value="REUNION">Reunion</option>
+              <option value="RIVERVIEW">Riverview</option>
+              <option value="ROTONDA WEST">Rotanda West</option>
+              <option value="RUSKIN">Ruskin</option>
+              <option value="SAINT CLOUD">Saint Cloud</option>
+              <option value="SANFORD">Sanford</option>
+              <option value="SARASOTA">Sarasota</option>
+              <option value="SEFFNER">Seffner</option>
+              <option value="SEMINOLE">Seminole</option>
+              <option value="SORRENTO">Sorrento</option>
+              <option value="SPRING HILL">Spring Hill</option>
+              <option value="ST PETE BEACH">St. Pete Beach</option>
+              <option value="ST PETERSBURG">St. Petersburg</option>
+              <option value="SUMMERFIELD">Summerfield</option>
+              <option value="TAMPA">Tampa</option>
+              <option value="TARPON SPRINGS">Tarpon Springs</option>
+              <option value="TAVARES">Tavares</option>
+              <option value="THE VILLAGES">The Villages</option>
+              <option value="THONOTOSASSA">Thonotosassa</option>
+              <option value="TIERRA VERDE">Tierra Verde</option>
+              <option value="TREASURE ISLAND">Treasure Island</option>
+              <option value="TRINITY">Trinity</option>
+              <option value="VALRICO">Valrico</option>
+              <option value="VENICE">Venice</option>
+              <option value="WESLEY CHAPEL">Wesley Chapel</option>
+              <option value="WIMAUMA">Wimauma</option>
+              <option value="WINDERMERE">Windermere</option>
+              <option value="WINTER GARDEN">Winter Garden</option>
+              <option value="WINTER HAVEN">Winter Haven</option>
+              <option value="WINTER PARK">Winter Park</option>
+              <option value="ZEPHYRHILLS">Zephyrhills</option>
           </select>
         </div>
     </div>
@@ -175,7 +226,6 @@
           <label for"bedsmin">Beds</label><br>
           <select id="bedsmin" name="bedsmin">
               <option value="0">Any</option>
-              <option value="1">1</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
               <option value="4">4+</option>
@@ -187,7 +237,6 @@
           <label for"bathsmin">Baths</label><br>
           <select id="bathsmin" name="bathsmin">
               <option value="0">Any</option>
-              <option value="1">1</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
               <option value="4">4+</option>
@@ -199,7 +248,7 @@
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 minSqft">
           <label for="minsqft">Min SqFt</label><br>
               <select id="minsqft" name="minsqft">
-                <option value="100" selected>Any</option>
+                <option value="0" selected>Any</option>
                 <option value="800">800</option>
                 <option value="1000">1000</option>
                 <option value="1200">1200</option>
@@ -251,16 +300,16 @@
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 stories">
         <label for"stories">Stories</label><br>
           <select id="stories" name="stories">
-              <option value="3">Any</option>
+              <option value="200">Any</option>
               <option value="1">1</option>  
           </select>
         </div>
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
           <label for"garages">Garages</label><br>
           <select id="garages" name="garages">
-              <option value="1">Any</option>
-              <option value="2">2+</option>
-              <option value="3">3+</option>
+              <option value="1CarGarage,2CarGarage,3CarGarage,4CarGarage,5PlusCarGarage,None,1CarCarport,2CarCarport,3CarCarport">Any</option>
+              <option value="2CarGarage,3CarGarage,4CarGarage,5PlusCarGarage">2+</option>
+              <option value="3CarGarage,4CarGarage,5PlusCarGarage">3+</option>
           </select>
         </div>
     </div>
@@ -277,15 +326,21 @@
           <% if (listing.city === 'ORLANDO') { %>
           <div class="col-lg-3 col-md-4 col-sm-6 well HOME">
       <div class="statusButtons"><button id="new" disabled="true">MLS Listed</button><button id="new2" disabled="true">Active</button></div>
-      <div class="listingImage"><a href="/orlando/<%= listing._id %>"><img class="image" src="/images/house.jpg" height="200px" width="250px"></a></div>
-      <div class="prevNextFav"><button>Prev</button><button>Next</button><button><img src="images/favorite-icon.png" height="15px" width="15px"> Favorite</button></div>  
+      
+ <div class="listingImage rtl">
+          <% for (var i = 1; i <= listing.photoCount; i++) { %>
+        <a href="/chicago/<%= listing._id %>"><img class="image" src="/images/orlandoImages/<%= listing.matrixID %>-<%= i %>.jpeg" height="200px" width="250px"></a>
+        <% } %>
+    </div>
+
       <div class="listingBasics" class="text-center"><div><strong><span class="price"><%= listing.price %></span></strong></div>
       <div><%= listing.beds %> Bed, <%= listing.baths %> Bath, <%= listing.sqft %> Sq.Ft.</div>
       <div><span class='address'><%= listing.address %> in <%= listing.city %>, <%= listing.state %></span></div>
       <div><span class='neighborhood'>Subdiv: <strong><%= listing.subdivision %></strong></span></div>
       <div><span class='listingOffice'><%= listing.listOffice %></span></div><br>
      </div>
-            <div class="amenities"><button id='none' disabled='true'><img src="images/stories-icon.png" height="20px" width="20px"><%= listing.stories %> Stories</button><% if (listing.garage.indexOf('1CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Garage</button><% } %><% if (listing.garage.indexOf('2CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Garage</button><% } %><% if (listing.garage.indexOf('3CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Garage</button><% } %><% if (listing.garage.indexOf('4CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">4 Garage</button><% } %><% if (listing.garage.indexOf('5PlusCarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">5+ Garage</button><% } %><% if (listing.pool.indexOf('Private') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.lotSize %> Acres</button><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.waterfront > 0) { %><button id="none" disabled="true"><img src="images/waterfront-icon.png" height="20px" width="20px"> Waterfront</button><% } else { %><% } %><% if (listing.amenities.indexOf('GolfComm') >= 0) { %><button id="none" disabled="true"><img src="images/golf-icon2.png" height="20px" width="20px"> Golf Comm</button><% } else { %><% } %><% if (listing.pool.indexOf('Community') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('GatedComm') >= 0) { %><button id="none" disabled="true"><img src="images/gate-icon.png" height="20px" width="20px"> Gated Comm</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="Elem: <%= listing.elemSchool %> <br> Middle: <%= listing.middleSchool %> <br>High School: <%= listing.highSchool %>">Schools</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="Taxes: $<%= listing.taxes %> <br> $/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaDuration %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Darrin Bennett" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'>512-270-9688</a> <br> <a href='mailto:darrin@austinHomesMatchmaker.com'>Email</a>">Contact Agent</button></div></div>
+            <div class="amenities">
+                <% if (listing.propType ==='CondoHotel' || listing.propType === 'Condo') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px">Floor #<%= listing.stories %></button><% } else { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"><%= listing.stories %> Stories</button><% } %><% if (listing.garage.indexOf('1CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Garage</button><% } %><% if (listing.garage.indexOf('2CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Garage</button><% } %><% if (listing.garage.indexOf('3CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Garage</button><% } %><% if (listing.garage.indexOf('4CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">4 Garage</button><% } %><% if (listing.garage.indexOf('5PlusCarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">5+ Garage</button><% } %><% if (listing.garage.indexOf('1CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Carport</button><% } %><% if (listing.garage.indexOf('2CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Carport</button><% } %><% if (listing.garage.indexOf('3CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Carport</button><% } %><% if (listing.pool.indexOf('Private') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.lotSize != '0.00') { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.lotSize %> Acres</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.waterfront > 0) { %><button id="none" disabled="true"><img src="images/waterfront-icon.png" height="20px" width="20px"> Waterfront</button><% } else { %><% } %><% if (listing.amenities.indexOf('GolfComm') >= 0) { %><button id="none" disabled="true"><img src="images/golf-icon2.png" height="20px" width="20px"> Golf Comm</button><% } else { %><% } %><% if (listing.pool.indexOf('Community') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('GatedComm') >= 0) { %><button id="none" disabled="true"><img src="images/gate-icon.png" height="20px" width="20px"> Gated Comm</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="Elem: <%= listing.elemSchool %> <br> Middle: <%= listing.middleSchool %> <br>High School: <%= listing.highSchool %>">Schools</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="Taxes: $<%= listing.taxes %> <br> $/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaDuration %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Darrin Bennett" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'>512-270-9688</a> <br> <a href='mailto:darrin@austinHomesMatchmaker.com'>Email</a>">Contact Agent</button></div></div>
 
 
 
@@ -305,4 +360,6 @@
 
  <script src='/javascripts/javascript.js'></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+ <!-- SLICK SLIDER SCRIPT -->
+ <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
   </body>
