--- a/views/searchPageQC.ejs
+++ b/views/searchPageQC.ejs
@@ -3,10 +3,13 @@
   <head>
     <title>QUAD CITIES SEARCH</title>
     <link rel='stylesheet' href='/stylesheets/searchPage.css' />
-      <link rel='stylesheet' href='/stylesheets/style3.css' />
-       <link rel='stylesheet' href='/stylesheets/style.css' />
-     <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
-     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <!-- SLICK SLIDER CSS -->
+    <link rel='stylesheet' href='/stylesheets/slickSlider.css' />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
+    <link rel='stylesheet' href='/stylesheets/style3.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
     
 
   </head>
@@ -59,6 +62,7 @@
               <option value="Coal Valle">Coal Valley</option>
               <option value="Colona">Colona</option>
               <option value="Geneseo">Geneseo</option>
+              <option value="Kewanee">Kewanee</option>
               <option value="Milan">Milan</option>
               <option value="Orion">Orion</option>
               <option value="Port Byron">Port Byron</option>
@@ -173,7 +177,7 @@
         <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 col-xs-6 col-xs-offset-0 minSqft">
           <label for="minsqft">Min SqFt</label><br>
               <select id="minsqft" name="minsqft">
-                <option value="100" selected>Any</option>
+                <option value="0" selected>Any</option>
                 <option value="800">800</option>
                 <option value="1000">1000</option>
                 <option value="1200">1200</option>
@@ -233,7 +237,7 @@
         <div class="col-md-2 col-sm-2 col-sm-2 col-xs-6 garages">
           <label for"garages">Garages</label><br>
           <select id="garages" name="garages">
-              <option value="1">Any</option>
+              <option value="0">Any</option>
               <option value="2">2+</option>
               <option value="3">3+</option>
           </select>
@@ -250,11 +254,16 @@
   <div class="justListed text-center">Just Listed Today</div>
   <div id="container">
           <% listings.forEach(function(listing) { %>
-          <% if (listing.DOM <= 100) { %>
+          <% if (listing.DOM <= 1) { %>
           <div class="col-lg-3  col-md-4 col-sm-6 well HOME">
        <div class="statusButtons"><button id="new" disabled="true">MLS Listed</button><button id="new2" disabled="true"><% if (listing.status == '1_0') { %> Active <%}  %><% if (listing.status == '1_1') { %> Active <%}  %><% if (listing.status == '1_2') { %> Contingent <%}  %><% if (listing.status == '1_3') { %> New <%}  %><% if (listing.status == '1_4') { %> Reduced <%}  %></button><% if (listing.DOM <= 2) { %><button id="new" disabled="true">New!</button> <% } %></div>
-      <div class="listingImage"><a href="/quadcities/<%= listing._id %>"><img class="image" src="/images/house.jpg" height="200px" width="250px"></a></div>
-      <div class="prevNextFav"><button>Prev</button><button>Next</button><button><img src="images/favorite-icon.png" height="15px" width="15px"> Favorite</button></div>  
+       
+       <div class="listingImage rtl">
+          <% for (var i = 1; i <= listing.photoCount; i++) { %>
+        <a href="/quadCities/<%= listing._id %>"><img class="image" src="/images/QCImages/LargePhoto<%= listing.MLS %>-<%= i %>.jpeg" height="200px" width="250px"></a>
+        <% } %>
+    </div>
+
       <div class="listingBasics" class="text-center"><div><strong><span class="price"><%= listing.price %></span></strong>&nbsp;&nbsp;&nbsp;&nbsp;<%= listing.DOM %> Days on Market</div>
       <div><%= listing.beds %> Bed, <%= listing.baths %> Bath, <%= listing.sqft %> Sq.Ft.</div>
       <div><%= listing.address %> in <%= listing.city %>, <%= listing.state %></div>
@@ -278,6 +287,8 @@
       </div>
     </footer>
 
- <script src='/javascripts/javascript.js'></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> 
+  <script src='/javascripts/javascript.js'></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!-- SLICK SLIDER SCRIPT -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script> 
   </body>
