--- a/views/showAustin.ejs
+++ b/views/showAustin.ejs
@@ -45,15 +45,14 @@
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="/images/austin-skyline.jpg">
-    </div>
-    <div class="item">
-      <img src="/images/house.jpg" alt="...">
-    </div>
-     <div class="item">
-      <img src="/images/house2.jpg" alt="...">
-    </div>
+     <div class='item active'>
+        <img class="image" src="/images/austinImages/LargePhoto<%= theListing.matrixID %>-1.jpeg" height="400" width="800">
+      </div>
+      <% for (var i = 2; i <= theListing.photoCount; i++) { %>
+      <div class='item'>
+        <img class="image" src="/images/austinImages/LargePhoto<%= theListing.matrixID %>-<%= i %>.jpeg" height="400" width="800">
+      </div>
+        <% } %>
   </div>
 
   <!-- Controls -->
@@ -86,7 +85,7 @@
       </div>
       <div class='col-md-6'>
         <h2 id='h2'>MORE INFO</h2>
-        <div><button id='none' disabled='true'><%= theListing.stories %> Stories</button><% if (theListing.garage > 0) { %><button id='none' disabled='true'><%= theListing.garage %> Garage</button><% } else { %><% } %><% if (theListing.fireplace > 0) { %><button id="none" disabled="true">Fireplace</button><% } else { %><% } %><% if (theListing.pool > 0) { %><button id="none" disabled="true">Pool</button><% } else { %><% } %><% if (theListing.masterMain === '1') { %><button id="none" disabled="true">Master Main</button><% } else { %><% } %><% if (theListing.view.indexOf('GRENBELT') >= 0) { %><button id="none" disabled="true">Greenbelt</button><% } else { %><% } %><% if (theListing.amenities.indexOf('GOLFPRIV') >= 0 || theListing.amenities.indexOf('GOLFPUB') >= 0) { %><button id="none" disabled="true">Golf Comm</button><% } else { %><% } %><% if (theListing.amenities.indexOf('POOLCOMM') >= 0) { %><button id="none" disabled="true">Comm Pool</button><% } else { %><% } %><% if (theListing.waterfront > 0) { %><button id="none" disabled="true">Waterfront</button><% } else { %><% } %><% if (theListing.amenities.indexOf('LAKEPRIV') >= 0) { %><button id="none" disabled="true">Comm Lake</button><% } else { %><% } %><% if (theListing.rooms.indexOf('RMOFS') >= 0) { %><button id='none' disabled='true'>Study</button><% } else { %><% } %><% if (theListing.rooms.indexOf('RMHTH') >= 0 || theListing.rooms.indexOf('RMMED'))  { %><button id='none' disabled='true'>Media Room</button><% } else { %><% } %><button id="none" disabled="true">Built <%= theListing.yearBuilt %></button></div>
+        <div><button id='none' disabled='true'><%= theListing.stories %> Stories</button><% if (theListing.garage > 0) { %><button id='none' disabled='true'><%= theListing.garage %> Garage</button><% } else { %><% } %><% if(theListing.lotSize !== '0.00') { %><button id='none' disabled='true'><%= theListing.lotSize %> Acres</button><% } else { %><% } %><% if (theListing.fireplace > 0) { %><button id="none" disabled="true">Fireplace</button><% } else { %><% } %><% if (theListing.pool > 0) { %><button id="none" disabled="true">Pool</button><% } else { %><% } %><% if (theListing.masterMain === '1') { %><button id="none" disabled="true">Master Main</button><% } else { %><% } %><% if (theListing.view.indexOf('GRENBELT') >= 0) { %><button id="none" disabled="true">Greenbelt</button><% } else { %><% } %><% if (theListing.amenities.indexOf('JOGBIKE') >= 0) { %><% } %><% if (theListing.amenities.indexOf('PARK') >= 0) { %><button id="none" disabled="true">Comm Park</button><% } else { %><% } %><% if (theListing.amenities.indexOf('DOGPRK') >= 0) { %><button id="none" disabled="true">Jog/Bike Path</button><% } else { %><% } %><% if (theListing.amenities.indexOf('DOGPRK') >= 0) { %><button id="none" disabled="true">Comm Dog Park</button><% } else { %><% } %><% if (theListing.amenities.indexOf('GOLFPRIV') >= 0 || theListing.amenities.indexOf('GOLFPUB') >= 0) { %><button id="none" disabled="true">Golf Comm</button><% } else { %><% } %><% if (theListing.amenities.indexOf('POOLCOMM') >= 0) { %><button id="none" disabled="true">Comm Pool</button><% } else { %><% } %><% if (theListing.waterfront > 0) { %><button id="none" disabled="true">Waterfront</button><% } else { %><% } %><% if (theListing.amenities.indexOf('LAKEPRIV') >= 0) { %><button id="none" disabled="true">Comm Lake</button><% } else { %><% } %><% if (theListing.rooms.indexOf('RMOFS') >= 0) { %><button id='none' disabled='true'>Study</button><% } else { %><% } %><% if (theListing.rooms.indexOf('RMHTH') >= 0 || theListing.rooms.indexOf('RMMED'))  { %><button id='none' disabled='true'>Media Room</button><% } else { %><% } %><button id="none" disabled="true">Built <%= theListing.yearBuilt %></button></div>
     </div>
   </div>
     <div class='row'>
